--- a/Java/src/main/resources/application.properties
+++ b/Java/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=Java
 # datasource
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:mysql://localhost:3306/nome_do_banco?useSSL=false&serverTimezone=UTC
 spring.datasource.username=rm555241
-spring.datasource.password=fiap.25
+spring.datasource.password=1234567
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuração do cliente web do banco H2
 spring.h2.console.enabled=true
@@ -14,7 +14,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 
 jwt.secret=MinhaChaveSuperSecreta12345678901234567890
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
